2011-02-12  Andreas K. Foerster  <info@akfoerster.de>

	* avtaddons.h (avta_load_vorbis_file, avta_load_vorbis_data):
	new functions
	avtvorbis.c: new file
	renamed lua/avt-vorbis.c -> lua/akfavatar-vorbis.c

	* akfavatar.h, avatar-audio.c: change definition of avt_audio_t

2011-02-08  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-audio.c (avt_add_raw_audio_data): new function
	avatar-audio.c (avt_load_raw_audio_data): adapted
	lua/avt-vorbis.c (load_vorbis): adapted

2011-02-04  Andreas K. Foerster  <info@akfoerster.de>

	* stb_vorbis.c, lua/avt-vorbis.c: new files

	* lua/akfavatar/avtdemo.lua: optional support for Ogg Vorbis

2011-02-03  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_load_audio_file, lavt_load_audio_string):
	on error return nil and an error message

	* avatar-audio.c (avt_load_audio_RW): improve error messages

2010-11-26  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/utf8.lua (utf8.codepoints): new function

2010-11-25  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_mb_encoding): fix

2010-11-23  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_mb_encoding):
	check if new encoding is actually different

2010-11-21  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/utf8.lua (utf8.sub): new function

2010-11-20  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/utf8.lua (utf8.check_unicode):
	no fallback

	* lua/lua-akfavatar-prg.c:
	don't include the base64 lib (available as module now)

2010-11-19  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/utf8.lua (utf8.bold, utf8.underlined):
	new functions

2010-11-17  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c (avta_term_run):
	fix: unlock updates, reset newline mode

	* avtaddons.h, avtterm.c (avta_term_initialize):
	changed definition
	avttermsys.h, avttermsys.c (avta_term_initialize): dito
	avatarsay.c: adapted

2010-11-16  Andreas K. Foerster  <info@akfoerster.de>
