@@ -5,7 +5,8 @@
 	avtvorbis.c: new file
 	renamed lua/avt-vorbis.c -> lua/akfavatar-vorbis.c
 
-	* akfavatar.h, avatar-audio.c: change definition of avt_audio_t
+	* akfavatar.h, avatar.c, avatar-audio.c:
+	change definitions of avt_image_t and avt_audio_t
 
 2011-02-08  Andreas K. Foerster  <info@akfoerster.de>
 
